# eve-bot

./: .gitignore  Cargo.toml  deploy.yaml
bot/: Cargo.toml  wrangler.toml
bot/src/: constants.rs  interactions.rs  lib.rs  routes.rs  search.rs  utils.rs
bot/src/interactions/: alliance.rs  login.rs  search.rs  watch.rs
bot/src/routes/: interaction.rs  login.rs
indexer/: Cargo.toml  build.rs
indexer/src/: data.rs  main.rs
item-search/: Cargo.toml  build.rs
item-search/src/: config.rs  data.rs  main.rs
item-search/src/data/: types.rs
sled-ext/: Cargo.toml
sled-ext/src/: key.rs  lib.rs  tree.rs  value.rs
zkill-webhook/: .gitignore  Cargo.toml  Dockerfile
zkill-webhook/src/: data.rs  main.rs  model.rs  prelude.rs  ws.rs
zkill-webhook/src/model/: zkb.rs
