[package]
name = "indexer"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
csv = "1.1.6"
futures = "0.3"
indicatif = "0.16"
meilisearch-sdk = "0.11.0"
serde = { version = "1.0", features = ["derive"] }
structopt = "0.3"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "full"] }

[build-dependencies.serde]
version = "1.0"
features = ["derive"]

[build-dependencies.config_struct]
version = "0.5"
features = ["toml-parsing"]
