[package]
name = "zkill-webhook"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-tungstenite = { version = "0.15", features = ["tokio-runtime", "tokio-rustls-webpki-roots"] }
axum = "0.2"
bytes = "1.0"
futures = "0.3"
reqwest = { version = "0.11", features = ["rustls-tls"] }
sled = "0.34"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tower = "0.4"
tower-http = { version = "0.1", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = "0.2"
