[package]
name = "zkill-webhook"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-tungstenite = { version = "0.15", features = ["tokio-runtime", "tokio-rustls-webpki-roots"], default-features = false }
axum = "0.2"
bincode = "1.3"
futures = "0.3"
reqwest = { version = "0.11", features = ["rustls-tls"], default-features = false }
sled = "0.34"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tower = "0.4"
tower-http = { version = "0.1", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = "0.2"
